syntax = "proto3";

package org.rococo.grpc.common.type;

option java_multiple_files = true;
option java_package = "org.rococo.grpc.common.type";
option java_outer_classname = "RococoRequestTypeProto";

message IdType {
  string id = 1;
}

message IdsType {
  repeated string id = 1;
}

message NameType {
  string name = 1;
}

message NameListType {
  repeated string name = 1;
}